--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,18 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.parallax {
+  width: 100%;
+  height: 100%;
+}
+
+.parallax-background {
+  width: auto;
+  height: 100%;
+}
+
+.react-parallax-background-children {
+  width: 100%;
+  height: 100%;
+}
