--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,14 @@ body {
   margin: auto;
 }
 
+.blur {
+  filter: blur(10px);
+  -webkit-filter: blur(10px);
+  -moz-filter: blur(10px);
+  -o-filter: blur(10px);
+  -ms-filter: blur(10px);
+}
+
 .react-parallax-background-children {
   width: 100%;
   height: 100%;
